; ModuleID = '/home/carl/AnghaBench/git/extr_submodule-config.c_config_set_in_gitmodules_file_gently.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule-config.c_config_set_in_gitmodules_file_gently.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GITMODULES_FILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Could not update .gitmodules entry %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_set_in_gitmodules_file_gently(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @GITMODULES_FILE, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @git_config_set_in_file_gently(i32 %6, i8* %7, i8* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = call i32 @_(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @warning(i32 %13, i8* %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @git_config_set_in_file_gently(i32, i8*, i8*) #1

declare dso_local i32 @warning(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
